# bench-uring

./: .RData  .Rhistory  Cargo.toml  data.csv
.github/workflows/: slides.yml
examples/: client_tokio.rs  client_tokio_mt.rs  client_tokio_st.rs  server_async_uring_tokio_mt.rs  server_async_uring_tokio_st.rs  server_monoio_mt.rs  server_monoio_st.rs  server_tokio_mt.rs  server_tokio_st.rs  server_tokio_uring_mt.rs  server_tokio_uring_st.rs
slides/: 2025-05-17.html  2025-05-17.qmd  2025-05-24.csv  2025-05-24.html  2025-05-24.qmd  index.html
slides/rscripts/: plot_filtered_data.R  setup.R  thread_plot.R
src/: lib.rs  logger.rs  main.rs  tokio.rs  utils.rs
src/cli/: mod.rs
src/client/: tokio.rs
src/server/: async_uring.rs  mod.rs  monoio.rs  tokio.rs  tokio_uring.rs  utils.rs
