[package]
name = "bench-uring"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-uring = "0.5.0"
monoio = "0.2"
lazy-regex = { version = "3.4.1", default-features = false, features = ["lite"] }
rand = "0.9.1"

# error handling
eyre = "0.6"
color-eyre = "0.6"
# logger
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"

# save benchmark data
csv = "1.3.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
